Cambios: Dashboard de empresa; Etapas; Timeline; Styles;

--- a/VLaboralWeb/App/EtapasOferta/Partials/etapaOfertaAdd.html
+++ b/VLaboralWeb/App/EtapasOferta/Partials/etapaOfertaAdd.html
@@ -1,6 +1,6 @@
-﻿<md-dialog aria-label="Agregar puesto a la oferta" ng-cloak flex="100">
+﻿<md-dialog aria-label="Agregar puesto a la oferta" ng-cloak flex="70">
     <md-toolbar>
-        <div class="md-toolbar-tools">
+        <div class="md-toolbar-tools" style="background-color:rgb(62, 138, 187);">
             <h2>Agregar Etapa a la Oferta</h2>
             <span flex></span>
             <md-button class="md-icon-button" ng-click="cancel()">
