--- a/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
@@ -1,28 +1,29 @@
 ﻿    
-<main>
+<main class="ad_ofer">
     <md-container>
         <h1>Nueva Oferta</h1>
-        <div layout="row">
-            <div layout="column" flex="65">
-                <!--#region fpaz Seccion de datos Basicos de la Oferta-->
-                <div layout="column" class="md-inline-form" >
-                    <h2>Titulo de la oferta</h2>
+        <div layout="column">
+            <div layout="row" layout-sm="column" layout-xs="column" class="of_ad">
+                <div layout="column" flex="40" flex-sm="100" flex-xs="100">
+                    <!--#region fpaz Seccion de datos Basicos de la Oferta-->
+                    <div layout="column" class="md-inline-form">
+                        <h2>Titulo de la oferta</h2>
 
-                    <div layout="row" layout-align="start center">
-                        <md-input-container flex="70">
-                            <label>Nombre de la Oferta</label>
-                            <input ng-model="oferta.Nombre">
-                        </md-input-container>
-                    </div>
-                    <h2>Tipo de Oferta</h2>
-                    <div layout="row" layout-align="start center">
-                        
-                        <md-radio-group ng-model="oferta.Publica">
-                            <md-radio-button value=true class="md-primary">Publica</md-radio-button>
-                            <md-radio-button value=false> Privada </md-radio-button>
-                        </md-radio-group>
-                    </div>
-                    <h2>Seleccione la fecha de convocatoria</h2>
+                        <div layout="row" layout-align="start center">
+                            <md-input-container flex="100">
+                                <label>Nombre de la Oferta</label>
+                                <input ng-model="oferta.Nombre">
+                            </md-input-container>
+                        </div>
+                        <h2>Tipo de Oferta</h2>
+                        <div layout="row" layout-align="start center">
+
+                            <md-radio-group ng-model="oferta.Publica">
+                                <md-radio-button value=true class="md-primary">Publica</md-radio-button>
+                                <md-radio-button value=false> Privada </md-radio-button>
+                            </md-radio-group>
+                        </div>
+                        <h2>Seleccione la fecha de convocatoria</h2>
                         <div layout="row" layout-align="start center" flex="100">
                             <md-datepicker ng-model="oferta.FechaInicioConvocatoria" md-placeholder="Inicio de la Convocatoria" felx="50">
                             </md-datepicker>
@@ -33,16 +34,165 @@
                         <h2>Ingrese una descripción</h2>
 
                         <div layout="row" layout-align="start center">
-                            <md-input-container  layout-fill>
+                            <md-input-container layout-fill>
                                 <label>Descripcion</label>
                                 <textarea ng-model="oferta.Descripcion" md-maxlength="500" rows="20" md-select-on-focus></textarea>
                             </md-input-container>
                         </div>
 
                     </div>
-                <!--#endregion-->
-                <!--#region fpaz: seccion de puestos de la oferta-->
-        <md-whiteframe class="md-whiteframe-1dp wf" flex="100" layout layout-align="center center">
+                    <!--#endregion-->
+                </div>
+                <!-- NUEVA TIMELINE :EZEQUIEL-->
+                <!-- The Timeline -->
+                <div layout="column" flex="60">
+                    <!--#region Seccion del Timeline de Etapas del Proceso de contratacion de la oferta-->
+                    <h1 style="text-align:center;">Etapas de la Oferta</h1>
+                    <ul class="timeline">
+
+                        <!-- Item 1 -->
+
+                        <li>
+
+                            <div class="direction-r">
+
+                                <div class="flag-wrapper">
+
+                                    <span class="flag">Reclutamiento</span>
+
+                                    <span class="time-wrapper"><span class="time">15/09/2016</span></span>
+
+                                </div>
+
+                                <div class="desc">Comienzo de etapa de reclutamiento de personal</div>
+
+                            </div>
+
+                        </li>
+
+                        <!-- uno -->
+                        <li>
+
+                            <div class="direction-l">
+
+                                <div class="flag-wrapper">
+
+                                    <span class="flag">Pre-seleccion</span>
+
+                                    <span class="time-wrapper"><span class="time">20/09/2016 a 25/09/2016</span></span>
+
+                                </div>
+
+                                <div class="desc">My current employment. Way better than the position before!</div>
+
+                            </div>
+
+                        </li>
+                        <!-- Item 2 -->
+
+                        <li>
+
+                            <div class="direction-r">
+
+                                <div class="flag-wrapper">
+
+                                    <span class="flag">Entrevista formal</span>
+
+                                    <span class="time-wrapper"><span class="time">2011 - 2013</span></span>
+
+                                </div>
+
+                                <div class="desc">My first employer. All the stuff I've learned and projects I've been working on.</div>
+
+                            </div>
+                        </li>
+
+                        <!-- Item 3 -->
+
+                        <li>
+
+                            <div class="direction-l">
+
+                                <div class="flag-wrapper">
+
+                                    <span class="flag">Examenes medicos</span>
+
+                                    <span class="time-wrapper"><span class="time">2008 - 2011</span></span>
+
+                                </div>
+
+                                <div class="desc">A description of all the lectures and courses I have taken and my final degree?</div>
+
+                            </div>
+
+                        </li>
+
+                        <!-- ultima -->
+
+                        <li>
+
+                            <div class="direction-r">
+
+                                <div class="flag-wrapper">
+
+                                    <span class="flag">Entrevista final</span>
+
+                                    <span class="time-wrapper"><span class="time">2011 - 2013</span></span>
+
+                                </div>
+
+                                <div class="desc">My first employer. All the stuff I've learned and projects I've been working on.</div>
+
+                            </div>
+                        </li>
+
+                        <!-- Item 3 -->
+
+                        <li>
+
+                            <div class="direction-l">
+
+                                <div class="flag-wrapper">
+
+                                    <span class="flag">Contratacion</span>
+
+                                    <span class="time-wrapper"><span class="time">2008 - 2011</span></span>
+
+                                </div>
+
+                                <div class="desc">A description of all the lectures and courses I have taken and my final degree?</div>
+
+                            </div>
+
+                        </li>
+                    </ul>
+                    <!-- FIN NUEVA TIMELINE-->
+                    <!--                   <timeline>
+                               <timeline-event ng-repeat="etapa in oferta.EtapasOferta" side="alternate">
+                                   <!--<timeline-badge >
+                                   <i class="glyphicon {{event.badgeIconClass}}"></i>
+                               </timeline-badge>
+                                   <timeline-panel class="{{event.badgeClass}}">
+                                       <timeline-heading>
+                                           <h4>{{etapa.TipoEtapa.Nombre}}</h4>
+                                       </timeline-heading>
+                                       <p>{{etapa.TipoEtapa.Descripcion}}</p>
+                                       <p>Orden: {{etapa.Orden}}</p>
+                                   </timeline-panel>
+                               </timeline-event>
+                           </timeline>-->
+                    <!--#endregion-->
+                    <md-content>
+                        <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
+                            <md-button class="md-raised" ng-click="openEtapaOfertaAdd()">Agregar Etapa</md-button>
+                        </section>
+                    </md-content>
+                </div>
+            </div>
+        </div>
+        <div layuot="row">
+            <!--#region fpaz: seccion de puestos de la oferta-->
+            <md-whiteframe class="md-whiteframe-1dp wf" flex="100" layout layout-align="center center">
                 <div layout="column" class="md-inline-form">
                     <h1 class="md-title">Seccion de puestos</h1>
                     <h1 class="md-title">Cantidad de Puestos Cargados {{oferta.Puestos.length}}</h1>
@@ -60,33 +210,7 @@
                     </div>
                 </div>
                 <!--#endregion-->
-            </div>
-            <div layout="column" flex="35">
-                <!--#region Seccion del Timeline de Etapas del Proceso de contratacion de la oferta-->
-                <h1 class="md-title">Etapas de la Oferta</h1>
-
-                <timeline>
-                    <timeline-event ng-repeat="etapa in oferta.EtapasOferta" side="alternate">
-                        <!--<timeline-badge >
-                            <i class="glyphicon {{event.badgeIconClass}}"></i>
-                        </timeline-badge>-->
-                        <timeline-panel class="{{event.badgeClass}}">
-                            <timeline-heading>
-                                <h4>{{etapa.TipoEtapa.Nombre}}</h4>
-                            </timeline-heading>
-                            <p>{{etapa.TipoEtapa.Descripcion}}</p>
-                            <p>Orden: {{etapa.Orden}}</p>
-                        </timeline-panel>
-                    </timeline-event>
-                </timeline>
-                <!--#endregion-->
-                <md-content>
-                    <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
-                        <md-button class="md-raised" ng-click="openEtapaOfertaAdd()">Agregar Etapa</md-button>                        
-                    </section>
-                </md-content>
-            </div>
-        </div>
+</div>
     </md-container>
 </main>
 
