Agrego perfil de empresa con navefacion desde el detalle de oferta, tanto para  un profesional o una empresa logueada

--- a/VLaboralWeb/App/EtapasOferta/Partials/etapaOferta.html
+++ b/VLaboralWeb/App/EtapasOferta/Partials/etapaOferta.html
@@ -21,7 +21,7 @@
                                             <label>Postulantes</label>
                                         </v-pane-header>
                                         <v-pane-content>
-                                            {{postulante.Profesional.Apellido}} {{postulante.Profesional.Nombre}}
+                                            <a ui-sref="empresa.profesional({idPro: postulante.ProfesionalId})">{{postulante.Profesional.Apellido}} {{postulante.Profesional.Nombre}}</a>                                            
                                         </v-pane-content>
                                     </v-pane>
                                 </v-accordion>
