--- a/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
@@ -43,145 +43,35 @@
                     </div>
                     <!--#endregion-->
                 </div>
+
                 <!-- NUEVA TIMELINE :EZEQUIEL-->
+                
                 <!-- The Timeline -->
                 <div layout="column" flex="60">
                     <!--#region Seccion del Timeline de Etapas del Proceso de contratacion de la oferta-->
                     <h1 style="text-align:center;">Etapas de la Oferta</h1>
-                    <ul class="timeline">
-
-                        <!-- Item 1 -->
-
-                        <li>
+                    <ul class="timeline">                        
+                        <li  ng-repeat="etapa in oferta.EtapasOferta">
 
                             <div class="direction-r">
 
                                 <div class="flag-wrapper">
 
-                                    <span class="flag">Reclutamiento</span>
-
-                                    <span class="time-wrapper"><span class="time">15/09/2016</span></span>
-
-                                </div>
-
-                                <div class="desc">Comienzo de etapa de reclutamiento de personal</div>
-
-                            </div>
-
-                        </li>
-
-                        <!-- uno -->
-                        <li>
-
-                            <div class="direction-l">
-
-                                <div class="flag-wrapper">
-
-                                    <span class="flag">Pre-seleccion</span>
-
-                                    <span class="time-wrapper"><span class="time">20/09/2016 a 25/09/2016</span></span>
-
-                                </div>
-
-                                <div class="desc">My current employment. Way better than the position before!</div>
-
-                            </div>
-
-                        </li>
-                        <!-- Item 2 -->
-
-                        <li>
-
-                            <div class="direction-r">
-
-                                <div class="flag-wrapper">
-
-                                    <span class="flag">Entrevista formal</span>
+                                    <span class="flag">{{etapa.TipoEtapa.Nombre}}</span>
 
                                     <span class="time-wrapper"><span class="time">2011 - 2013</span></span>
 
                                 </div>
 
-                                <div class="desc">My first employer. All the stuff I've learned and projects I've been working on.</div>
-
-                            </div>
-                        </li>
-
-                        <!-- Item 3 -->
-
-                        <li>
-
-                            <div class="direction-l">
-
-                                <div class="flag-wrapper">
-
-                                    <span class="flag">Examenes medicos</span>
-
-                                    <span class="time-wrapper"><span class="time">2008 - 2011</span></span>
-
-                                </div>
-
-                                <div class="desc">A description of all the lectures and courses I have taken and my final degree?</div>
-
-                            </div>
-
-                        </li>
-
-                        <!-- ultima -->
-
-                        <li>
-
-                            <div class="direction-r">
-
-                                <div class="flag-wrapper">
-
-                                    <span class="flag">Entrevista final</span>
-
-                                    <span class="time-wrapper"><span class="time">2011 - 2013</span></span>
-
-                                </div>
-
-                                <div class="desc">My first employer. All the stuff I've learned and projects I've been working on.</div>
-
-                            </div>
-                        </li>
-
-                        <!-- Item 3 -->
-
-                        <li>
-
-                            <div class="direction-l">
-
-                                <div class="flag-wrapper">
-
-                                    <span class="flag">Contratacion</span>
-
-                                    <span class="time-wrapper"><span class="time">2008 - 2011</span></span>
-
-                                </div>
-
-                                <div class="desc">A description of all the lectures and courses I have taken and my final degree?</div>
+                                <div class="desc">{{etapa.TipoEtapa.Descripcion}}</div>
 
                             </div>
 
                         </li>
                     </ul>
+
                     <!-- FIN NUEVA TIMELINE-->
-                    <!--                   <timeline>
-                               <timeline-event ng-repeat="etapa in oferta.EtapasOferta" side="alternate">
-                                   <!--<timeline-badge >
-                                   <i class="glyphicon {{event.badgeIconClass}}"></i>
-                               </timeline-badge>
-                                   <timeline-panel class="{{event.badgeClass}}">
-                                       <timeline-heading>
-                                           <h4>{{etapa.TipoEtapa.Nombre}}</h4>
-                                       </timeline-heading>
-                                       <p>{{etapa.TipoEtapa.Descripcion}}</p>
-                                       <p>Orden: {{etapa.Orden}}</p>
-                                   </timeline-panel>
-                               </timeline-event>
-                           </timeline>-->
-                    <!--#endregion-->
+                    
                     <md-content>
                         <section layout="row" layout-sm="column" layout-align="center center" layout-wrap>
                             <md-button class="md-raised" ng-click="openEtapaOfertaAdd()">Agregar Etapa</md-button>
@@ -190,8 +80,9 @@
                 </div>
             </div>
         </div>
+
         <div layuot="row">
-            <!--#region fpaz: seccion de puestos de la oferta-->
+            
             <md-whiteframe class="md-whiteframe-1dp wf" flex="100" layout layout-align="center center">
                 <div layout="column" class="md-inline-form">
                     <h1 class="md-title">Seccion de puestos</h1>
@@ -209,14 +100,14 @@
                         </v-accordion>
                     </div>
                 </div>
-                <!--#endregion-->
+            
 </div>
     </md-container>
 </main>
 
 
 
-<!--#region Menu De Herramientas Flotante-->
+<!--#region Menu De Herramientas Flotante
 <nav mfb-menu position="br" effect="zoomin" label="Herramientas"
      active-icon="fa fa-times" resting-icon="fa fa-plus"
      toggling-method="hover">
