--- a/VLaboralWeb/App/Profesionales/Partials/profesionalPerfil.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalPerfil.html
@@ -1,5 +1,5 @@
 ﻿<main>
-    <md-container >
+    <md-container>
         <h1>Editar perfil.</h1>
         <md-whiteframe class="md-whiteframe-1dp wf" flex="100" layout layout-align="center center">
             <form>
@@ -24,18 +24,110 @@
                 <br />
 
                 <!--#region iafar: deberia ir la seleccion de tipo de identificacion-->
-                <h3>Ingrese su DNI</h3>
-                <md-input-container class="ic_p">
-                    <label class="lbl">DNI</label>
-                    <input ng-model="profesional.dni" class="inp">
-                </md-input-container>
+                <!--<div>--> <!--md-card-->
+                <h3>
+                    Documentacion Personal
 
-                <h3>Ingrese su CUIT</h3>
-                <md-input-container class="ic_p">
-                    <label class="lbl">CUIT</label>
-                    <input ng-model="cuit_pd" class="inp">
-                </md-input-container>
-                <!-- #endregion -->
+                    <md-button ng-click="opcionAgregar=!opcionAgregar">
+                        <md-icon ng-show="!opcionAgregar" md-svg-src="svg/add.svg"></md-icon>
+                        <md-icon ng-hide="!opcionAgregar" md-svg-src="svg/exit.svg"></md-icon>
+                    </md-button>
+                    <md-button ng-disabled="selectItems.length == 0"
+                               ng-click="eliminarTipoId(selectItems)">
+                        <md-icon md-svg-src="svg/trash.svg"></md-icon>
+                        <md-badge class="md-whiteframe-1dp">
+                            {{selectItems.length}}
+                        </md-badge>
+                    </md-button>
+                </h3>
+                <md-toolbar class="md-table-toolbar md-default">
+
+
+                    <div class="md-table-toolbar"
+                         layout="row"
+                         layout-align="end" flex
+                         ng-hide="!opcionAgregar">
+                        <md-input-container flex="30">
+                            <label>Tipo</label>
+                            <md-select ng-model="nuevoDoc.TipoIdentificacionProfesional">
+                                <!--<md-option><em>None</em></md-option>-->
+                                <md-option ng-repeat="tipo in identificacionesPro" ng-value="tipo">
+                                    {{tipo.Nombre}}
+                                </md-option>
+                            </md-select>
+                        </md-input-container>
+                        <md-input-container flex="35">
+                            <label>Numero</label>
+                            <input required ng-model="nuevoDoc.Valor">
+                        </md-input-container>
+                        <div layout-align="start"
+                             layout="row"
+                             flex="30">
+                            <md-button flex
+                                       ng-click="agregarDoc(nuevoDoc)">
+                                <!--opcionAgregar=false-->
+                                <md-icon md-svg-src="svg/success.svg"></md-icon>
+                            </md-button>
+
+                        </div>
+                    </div>
+
+                </md-toolbar>
+
+
+                <md-table-container>
+                    <table md-table
+                           ng-hide="docList==0"
+                           ng-model="selectItems"
+                           multiple
+                           md-row-select="true">
+                        <thead md-head>
+                            <tr md-row>
+                                <th md-column></th>
+                                <th md-column>Tipo</th>
+                                <th md-column>Numero</th>
+
+                            </tr>
+                        </thead>
+                        <tbody md-body>
+                            <tr md-row
+                                md-select="doc"
+                                md-auto-select="true"
+                                ng-repeat=" doc in profesional.IdentificacionesProfesional | limitTo: query.limit : (query.page -1) * query.limit">
+
+                                <td md-cell>
+                                    {{($index+1) + (query.page - 1) * query.limit}}
+                                </td>
+                                <td md-cell>
+                                    {{doc.TipoIdentificacionProfesional.Nombre}}
+                                </td>
+                                <td md-cell>
+                                    {{doc.Valor}}
+                                </td>
+
+
+                            </tr>
+
+                        </tbody>
+                    </table>
+
+                </md-table-container>
+                <div ng-show="profesional.IdentificacionesProfesional == 0" layout-align="center center" flex>
+                    <br>
+                    <h5>No posee Identificaciones cargadas</h5>
+                    <br>
+                </div>
+                <md-table-pagination layout="row" layout-align="center"
+                                     md-label="{page: 'Pag.:',
+                    rowsPerPage: 'Filas:',
+                    of: 'de'}"
+                                     md-page-select="true"
+                                     md-boundary-links="true"
+                                     md-limit="query.limit"
+                                     md-page="query.page"
+                                     md-total="{{profesional.IdentificacionesProfesional.length}}">
+                </md-table-pagination>
+                                <!-- #endregion -->
                 <h3>Ingrese su nacionalidad</h3>
                 <md-input-container class="ic_p">
                     <label class="lbl">Nacionalidad</label>
@@ -56,6 +148,29 @@
                 <h3>Ingrese una descripción curricular.</h3><br>
                 <textarea ng-model="profesional.DescripcionCurricular" type="text-area" class="ofer_tit ofer_desc ta" rows="6" placeholder="Ingrese una descripcion de la oferta.."></textarea>
                 <br>
+
+
+                <h3 class="md-title">Seleccione sus habilidades</h3>
+                <md-chips ng-model="chipsHabilidad" 
+                          name="chipContainer" 
+                          md-max-chips="5"
+                          md-transform-chip="transformChip($chip)">
+                    <md-autocomplete md-selected-item="selectedItem"
+                                     md-search-text="searchText"
+                                     md-items="item in habilidades"
+                                     md-item-text="item.Nombre">
+                        <span md-highlight-text="searchText">{{item.Nombre}}</span>
+                    </md-autocomplete>
+                    <md-chip-template>
+                        <strong>{{$chip}}</strong>
+
+                    </md-chip-template>
+
+                </md-chips>
+
+
+                <br>
+
                 <h3>Subir PDF de su curriculum.</h3>
                 <input type="file" name="foto" class="archivos" style="margin:2em 0;">
                 <br>
@@ -78,12 +193,10 @@
     <button mfb-button icon="mdi-image-edit" label="Editar Perfil" ng-click="edit()"></button>
     <button mfb-button icon="fa fa-floppy-o" label="Guardar Guardar Cambios" ng-click="profesionalPerfilUpdate(profesional)">
         <md-icon> face </md-icon>
-    </button>    
+    </button>
     <button mfb-button icon="fa fa-trash-o" label="Cancelar" ng-click="profesionalPerfilCancel()"></button>
 </nav>
 <!--#endregion-->
-
-
 <!--#region lo viejo-->
 <!--<div layout="column">
        <div layout="column">
