ajustes en la vista de ofertaAdd

--- a/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
@@ -44,9 +44,7 @@
                     <!--#endregion-->
                 </div>
 
-                <!-- NUEVA TIMELINE :EZEQUIEL-->
-                
-                <!-- The Timeline -->
+                <!-- NUEVA TIMELINE :EZEQUIEL-->                
                 <div layout="column" flex="60">
                     <!--#region Seccion del Timeline de Etapas del Proceso de contratacion de la oferta-->
                     <h1 style="text-align:center;">Etapas de la Oferta</h1>
@@ -100,14 +98,14 @@
                         </v-accordion>
                     </div>
                 </div>
-            
+           </md-whiteframe>
 </div>
     </md-container>
 </main>
 
 
 
-<!--#region Menu De Herramientas Flotante
+<!--#region Menu De Herramientas Flotante-->
 <nav mfb-menu position="br" effect="zoomin" label="Herramientas"
      active-icon="fa fa-times" resting-icon="fa fa-plus"
      toggling-method="hover">
