--- a/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
@@ -100,14 +100,15 @@
                         </v-accordion>
                     </div>
                 </div>
+             </md-whiteframe>
             
-</div>
+        </div>
     </md-container>
 </main>
 
 
 
-<!--#region Menu De Herramientas Flotante
+<!--#region Menu De Herramientas Flotante-->
 <nav mfb-menu position="br" effect="zoomin" label="Herramientas"
      active-icon="fa fa-times" resting-icon="fa fa-plus"
      toggling-method="hover">
