ProfesionalCtrl: Correción split habilidades cuando es null PuestoDetalle: correción md-chips subrubro ReadOnly

--- a/VLaboralWeb/App/Puestos/Partials/puestoDetalle.html
+++ b/VLaboralWeb/App/Puestos/Partials/puestoDetalle.html
@@ -48,7 +48,7 @@
             <div layout="row">
                 <div flex="50">
                     <h2 class="md-title">Subrubros del Puesto</h2>
-                    <md-chips ng-model="puesto.Subrubros" readonly>
+                    <md-chips ng-model="puesto.Subrubros" readonly="true">
                         <md-chip-template>
                             <span>
                                 <strong>{{$chip.Nombre}}</strong>
