modificacion de listado de ofertas en el home y de armado de array de habilidades desde profesionalesDF

--- a/VLaboralWeb/App/Home/Partials/homeInfo.html
+++ b/VLaboralWeb/App/Home/Partials/homeInfo.html
@@ -65,7 +65,7 @@
 <!-- COMIENZO DE SECCION PARA ELEGIR TIPO DE REGISTRO (PROFESIONAL/EMPRESA)-->
 <!-- COMIENZO SECCION LISTA DE OFERTAS -->
 
-<div class="t_list">
+<!--<div class="t_list">
     <h1>Listado de ofertas disponibles</h1>
 
 </div>
@@ -227,4 +227,4 @@
             </div>
         </article>
     </div>
-</section>
+</section>-->
