--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
@@ -21,9 +21,9 @@
         <a href="#">
             <li><span class="icon-mail4 icono_de"></span></li>
         </a>
-        <a href="#">
-            <li><img src="img/perfil.jpg" alt=""></li>
-        </a>
+        <li>
+            <span class="ic_m"></span><h6><a ui-sref="profesional.perfil">{{authentication.userName}}</a></h6>                    
+        </li>        
          <a ng-click="logOut()">
             <li><span class="icon-exit icono_de"></span></li>
         </a>
