--- a/VLaboralWeb/css/styles.css
+++ b/VLaboralWeb/css/styles.css
@@ -190,7 +190,7 @@ main h2 { font-family: 'Montserrat', sans-serif; font-weight: 300; font-size: 1.
 .puestos_box .p_items h4 span { font-weight: 700; font-size: 0.95em; color: #3c3c3c; }
 .puestos_box .p_items .va { background-color: #3e8abb; color: #f0f0f0; padding: 0.2em 0.4em 0.3em; border-radius: 10px; }
 
-table { display: block; width: 60.5%; margin: 0 auto 1em; border-collapse: collapse; }
+/*table { display: block; width: 60.5%; margin: 0 auto 1em; border-collapse: collapse; }*/
 table tr:nth-child(even) { background-color: #e1e1e1; }
 table tr td { text-align: center; padding: 0.6em; font-family: 'Lato', sans-serif; font-weight: 400; font-size: 1em; color: #38383c; }
 table tr .puesto { background: #27ae60; font-weight: 700; color: #d2d2d2; border-bottom: 1px solid #2ecc71; }
