modificacion en los menu de los 2 dashboard para ver el perfil del usuario logueado

--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
@@ -22,7 +22,7 @@
             <li><span class="icon-mail4 icono_de"></span></li>
         </a>
         <li>
-            <span class="ic_m"></span><h6><a ui-sref="profesional.perfil">{{authentication.userName}}</a></h6>                    
+            <span class="ic_m"></span><h6><a ui-sref="profesional.perfil({ idPro:authentication.profesionalId })"</a>{{authentication.userName}}</h6>                    
         </li>        
          <a ng-click="logOut()">
             <li><span class="icon-exit icono_de"></span></li>
