--- a/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
+++ b/VLaboralWeb/App/DashboardEmpresa/Partials/empresaDashboard.html
@@ -26,7 +26,7 @@
             <li><span class="icon-mail4 icono_de"></span></li>
         </a>
         <li>
-            <span class="ic_m"></span><h6><a ui-sref="empresa.perfil({idEmpresa: authSvc.authentication.empresaId})">{{authentication.userName}}</a></h6>
+            <span class="ic_m"></span><h6><a ui-sref="empresa.perfil({idEmpresa: authentication.empresaId})">{{authentication.userName}}</a></h6>
         </li>
         <a ng-click="logOut()">
             <li><span class="icon-exit icono_de"></span></li>
