Detalle del postulante y nueva experiencia del profesional

--- a/VLaboralWeb/App/Profesionales/Partials/profesionalPerfil.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalPerfil.html
@@ -149,7 +149,49 @@
                 <textarea ng-model="profesional.DescripcionCurricular" type="text-area" class="ofer_tit ofer_desc ta" rows="6" placeholder="Ingrese una descripcion de la oferta.."></textarea>
                 <br>
 
+                <!--#Region de skills en perfil-->
 
+                <md-card>
+                    <md-toolbar>
+                        <div class="md-toolbar-tools" style="background-color:#00C853"><h3 class="md-title">Experiencias laborales</h3></div>
+                    </md-toolbar>                    
+                   
+                    <md-card-content>
+                        
+                    </md-card-content>
+                    <md-button> Agregar +</md-button>
+                </md-card>
+
+                <md-card>
+                    <md-toolbar>
+                        <div class="md-toolbar-tools" style="background-color:#42A5F5"><h3 class="md-title">Cursos y Certificaciones</h3></div>
+                    </md-toolbar>
+                    <md-card-content>
+
+                    </md-card-content>
+                    <md-button> Agregar +</md-button>
+                </md-card>
+
+                <md-card>
+                    <md-toolbar>
+                        <div class="md-toolbar-tools" style="background-color:#00C853"><h3 class="md-title">Idiomas</h3></div>
+                    </md-toolbar>
+                    <md-card-content>
+
+                    </md-card-content>
+                    <md-button> Agregar +</md-button>
+                </md-card>
+                <md-card>
+                    <md-toolbar>
+                        <div class="md-toolbar-tools" style="background-color:#00C853"><h3 class="md-title">Educación</h3></div>
+                    </md-toolbar>
+                    <md-card-content>
+
+                    </md-card-content>
+                    <md-button> Agregar +</md-button>
+                </md-card>
+
+                <!--#endRegion-->
                 <h3 class="md-title">Seleccione sus habilidades</h3>
                 <md-chips ng-model="chipsHabilidad" 
                           name="chipContainer" 
