--- a/VLaboralWeb/App/EtapasOferta/Partials/etapaOferta.html
+++ b/VLaboralWeb/App/EtapasOferta/Partials/etapaOferta.html
@@ -21,7 +21,8 @@
                                             <label>Postulantes</label>
                                         </v-pane-header>
                                         <v-pane-content>
-                                            <a ui-sref="empresa.profesional({idPro: postulante.ProfesionalId})">{{postulante.Profesional.Apellido}} {{postulante.Profesional.Nombre}}</a>                                            
+                                            <md-button ng-click="postulanteDetalle(postulante.ProfesionalId)">{{postulante.Profesional.Apellido}} {{postulante.Profesional.Nombre}}</md-button>
+                                            <!--<a ui-sref="empresa.profesional({idPro: postulante.ProfesionalId})">{{postulante.Profesional.Apellido}} {{postulante.Profesional.Nombre}}</a>-->                                            
                                         </v-pane-content>
                                     </v-pane>
                                 </v-accordion>
