--- a/VLaboralWeb/App/Profesionales/Partials/profesionalPerfil.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalPerfil.html
@@ -159,9 +159,9 @@
                     <md-card-content>
                         
                     </md-card-content>
-                    <md-button> Agregar +</md-button>
+                    <md-button ng-click="nuevaExperiencia()"> Agregar +</md-button>    
                 </md-card>
-
+                
                 <md-card>
                     <md-toolbar>
                         <div class="md-toolbar-tools" style="background-color:#42A5F5"><h3 class="md-title">Cursos y Certificaciones</h3></div>
@@ -169,26 +169,26 @@
                     <md-card-content>
 
                     </md-card-content>
-                    <md-button> Agregar +</md-button>
+                    <md-button ng-click="nuevoCurso()"> Agregar +</md-button>
                 </md-card>
 
                 <md-card>
                     <md-toolbar>
-                        <div class="md-toolbar-tools" style="background-color:#00C853"><h3 class="md-title">Idiomas</h3></div>
+                        <div class="md-toolbar-tools" style="background-color:#FFB300"><h3 class="md-title">Idiomas</h3></div>
                     </md-toolbar>
                     <md-card-content>
 
                     </md-card-content>
-                    <md-button> Agregar +</md-button>
+                    <md-button ng-click="nuevoIdioma()"> Agregar +</md-button>
                 </md-card>
                 <md-card>
                     <md-toolbar>
-                        <div class="md-toolbar-tools" style="background-color:#00C853"><h3 class="md-title">Educación</h3></div>
+                        <div class="md-toolbar-tools" style="background-color:#4CAF50"><h3 class="md-title">Educación</h3></div>
                     </md-toolbar>
                     <md-card-content>
 
                     </md-card-content>
-                    <md-button> Agregar +</md-button>
+                    <md-button ng-click="nuevaEducacion()"> Agregar +</md-button>
                 </md-card>
 
                 <!--#endRegion-->
