--- a/VLaboralWeb/App/Profesionales/Partials/profesionalPerfil.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalPerfil.html
@@ -19,7 +19,7 @@
                     <input ng-model="profesional.Apellido" class="inp">
                 </md-input-container>
 
-                <h3>Seleccione Fecha de Nacimiento</h3><md-datepicker ng-model="profesional.FechaNac" md-placeholder="Ingrese la fecha"></md-datepicker>
+                <!--<h3>Seleccione Fecha de Nacimiento</h3><md-datepicker ng-model="profesional.FechaNac" md-placeholder="Ingrese la fecha"></md-datepicker>-->
                 <br />
                 <br />
 
@@ -149,18 +149,27 @@
                 <textarea ng-model="profesional.DescripcionCurricular" type="text-area" class="ofer_tit ofer_desc ta" rows="6" placeholder="Ingrese una descripcion de la oferta.."></textarea>
                 <br>
 
-                <!--#Region de skills en perfil-->
+                <!--#region de skills en perfil-->
 
+                <!--#region Experiencias Laborales-->
                 <md-card>
                     <md-toolbar>
                         <div class="md-toolbar-tools" style="background-color:#00C853"><h3 class="md-title">Experiencias laborales</h3></div>
                     </md-toolbar>                    
                    
                     <md-card-content>
-                        
+                        <ul>
+                            <li ng-repeat="exp in profesional.ExperienciasLaborales">
+                                Puesto: {{exp.Puesto}} - Empresa: {{exp.EmpresaId == null ?  exp.EmpresaExterna :  exp.Empresa.NombreFantasia}}
+                                <br />
+                                Descripcion del Puesto: {{exp.Descripcion}}
+                                <hr />
+                            </li>
+                        </ul>
                     </md-card-content>
                     <md-button ng-click="nuevaExperiencia()"> Agregar +</md-button>    
                 </md-card>
+                <!--#endregion-->
                 
                 <md-card>
                     <md-toolbar>
@@ -181,6 +190,7 @@
                     </md-card-content>
                     <md-button ng-click="nuevoIdioma()"> Agregar +</md-button>
                 </md-card>
+
                 <md-card>
                     <md-toolbar>
                         <div class="md-toolbar-tools" style="background-color:#4CAF50"><h3 class="md-title">Educación</h3></div>
@@ -191,7 +201,9 @@
                     <md-button ng-click="nuevaEducacion()"> Agregar +</md-button>
                 </md-card>
 
-                <!--#endRegion-->
+                <!--#endregion-->
+
+                <!--#region Seccion de Habilidades-->
                 <h3 class="md-title">Seleccione sus habilidades</h3>
                 <md-chips ng-model="chipsHabilidad" 
                           name="chipContainer" 
@@ -209,7 +221,7 @@
                     </md-chip-template>
 
                 </md-chips>
-
+                <!--#endregion-->
 
                 <br>
 
