--- a/VLaboralWeb/App/Cursos/Partials/nuevoCurso.html
+++ b/VLaboralWeb/App/Cursos/Partials/nuevoCurso.html
@@ -1,11 +1,17 @@
 ﻿<md-dialog layout="column" flex="70" layout-padding>
     <md-toolbar style="background-color:#42A5F5">
-        <div class="md-toolbar-tools"><h3 class="md-title">Nuevo Curso/Certificación</h3></div>
+        <div class="md-toolbar-tools">
+            <h3 class="md-title">Nueva Curso o Certificacion</h3>
+            <span flex></span>
+            <md-button class="md-icon-button" ng-click="cancel()">
+                <md-icon class="fa fa-times"></md-icon>
+            </md-button>
+        </div>       
     </md-toolbar>
     <md-dialog-content>
         <div layout="row">
             <md-input-container>
-                <label>Lugar</label>
+                <label>Centro de Estudios</label>
                 <input ng-model="curso.LugarEstudio" />
             </md-input-container>
             <md-input-container>
@@ -15,8 +21,8 @@
         </div>
         <div layout="row">
             <md-input-container>
-                <label>Entidad</label>
-                <input ng-model="curso.Entidad" />
+                <label>Entidad Certificante</label>
+                <input ng-model="curso.EntidadCertificante" />
             </md-input-container>
             <md-input-container>
                 <label>Nota</label>
@@ -37,9 +43,13 @@
             <md-datepicker md-placeholder="Fecha de Fin" ng-model="curso.FechaFin"></md-datepicker>
         </div>
     </md-dialog-content>
-    <md-dialog-actions>
-        <md-button>Cancelar</md-button>
-        <md-button>Guardar</md-button>
 
+    <md-dialog-actions>
+        <md-button ng-click="saveCurso(curso)">
+            Agregar Curso o Certificacion
+        </md-button>
+        <md-button ng-click="cancel()" class="md-primary">
+            Cancelar
+        </md-button>
     </md-dialog-actions>
 </md-dialog>
