(etapaOfeta.html) Detalle de etapa: Nombre, Descripción, Fechas de etapa, estado
Agregar botones para guardado temporal de modificaciones en cada puesto de la etapa de la oferta, y un boton para cerrar etapa y continuar con siguiente
Cargar scope con nombre de oferta recibido como parametro desde el routing @ivanalbertofarhat

--- a/VLaboralWeb/App/Ofertas/Partials/ofertaDetalle.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertaDetalle.html
@@ -37,7 +37,7 @@
                                 </div>
                                 <div class="desc">                                    
                                     <p>{{etapa.TipoEtapa.Descripcion}}</p>
-                                    <a ui-sref="empresa.ofertas.etapaDetalle({idEtapa: etapa.Id})" ng-show="usuarioLogueado.isEmpresa">Detalle</a>
+                                    <a ui-sref="empresa.ofertas.etapaDetalle({idEtapa: etapa.Id, NombreOferta: ofertaDetalle.Nombre})" ng-show="usuarioLogueado.isEmpresa">Detalle</a>
                                 </div>
                             </div>
                         </li>
