--- a/VLaboralWeb/App/EtapasOferta/Partials/etapaOferta.html
+++ b/VLaboralWeb/App/EtapasOferta/Partials/etapaOferta.html
@@ -3,7 +3,7 @@
         <md-content layout="row" layout-align="center center">
             <div flex="70" layout="column" class="ofertas_p" style="margin:2em 0;">
                 <div class="t_ofer_p" layout="column" layout-align="start center">
-                    <h1 class="md-display-3">{{etapaDetalle.Oferta.Nombre}}</h1>
+                    <h1 class="md-display-3">{{NombreOferta}}</h1>
                     <div class="md-list-item-text" layout="column">
                         
                         <h2>Etapa: {{ etapaDetalle.TipoEtapa.Nombre }}</h2>
@@ -131,28 +131,10 @@
                                                  md-page="query.page"
                                                  md-total="{{p.Postulaciones.length}}">
                             </md-table-pagination>
+                            <md-button class="md-primary">Guardar Cambios</md-button>
                         </md-card>
                         <!--#endregion-->
-                        <!--#region iafar: lista de postulantes vieja-->
-                        <!--<h2>{{p.Puesto.Nombre}}</h2>
-                        <h3>{{p.Puesto.Descripcion}}</h3>
-                        <div class="p_items" layout="column" layout-align="space-around start">
-                            <h4><span class="p_res">Cantidad de Postulaciones: {{p.Postulaciones.length}}</span></h4>
-                            <div layout="row">
-                                <v-accordion class="vAccordion--default" multiple control="accordion">
-                                    <v-pane id="accordionCategorias" ng-repeat="postulante in p.Postulaciones" expanded="true">
-                                        <v-pane-header>
-                                            <label>Postulantes</label>
-                                        </v-pane-header>
-                                        <v-pane-content>
-                                            <a ui-sref="empresa.profesional({idPro: postulante.ProfesionalId})">{{postulante.Profesional.Apellido}} {{postulante.Profesional.Nombre}}</a>
-                                            <!--<a ui-sref="empresa.profesional({idPro: postulante.ProfesionalId})">{{postulante.Profesional.Apellido}} {{postulante.Profesional.Nombre}}</a>-->                                            
-                                        </v-pane-content>
-                                    </v-pane>
-                                </v-accordion>
-                            </div>
-                        </div>-->
-                        <!--#endregion-->
+                     
                     </div>
                 </div>
             </div>
